Fixed alignment of icons in admin tabs

--- a/html/zikula2/themes/IWxtec2/style/style.css
+++ b/html/zikula2/themes/IWxtec2/style/style.css
@@ -456,3 +456,7 @@ table.z-datatable tbody tr th:hover {
 	margin: 0;
 	padding-top: 0px;
 }
+
+.z-adminiconcontainer {
+    height: 90px;
+}
